Updated Special Tile Colors

--- a/style/main.scss
+++ b/style/main.scss
@@ -338,10 +338,10 @@ hr {
   // Colors for all 11 states, false = no special color
   $special-colors: false false, // 3
                    false false, // 6
-                   #f78e48 true, // 12
+                   #e259d4 true, // 12
                    #fc5e2e true, // 24
-                   #ff3333 true, // 48
-                   #ff0000 true, // 96
+                   #38e698 true, // 48
+                   #6973f5 true, // 96
                    false true, // 192
                    false true, // 384
                    false true, // 768
